<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorcutom"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:fitsSystemWindows="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_search"
            app:layout_constraintTop_toTopOf="parent"
            app:queryBackground="@null"
            app:queryHint="searching"
            tools:layout_editor_absoluteX="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_search"
        android:layout_width="300dp"
        android:layout_height="245dp"
        android:contentDescription="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/rv_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.381"
        app:srcCompat="@drawable/search" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/rv_user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_label_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_some_user"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/img_search"
        app:layout_constraintStart_toStartOf="@+id/img_search"
        app:layout_constraintTop_toBottomOf="@+id/img_search" />

    <TextView
        android:id="@+id/tv_label_dsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_dsc"
        android:textSize="16sp"
        android:visibility="visible"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_search"
        app:layout_constraintStart_toStartOf="@+id/tv_label_search"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>